Initial commit: CDI Calculator with enhanced features

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "cdi-calculator",
   "version": "2.0.0",
   "description": "Circadian Duration Index (CDI) Calculator for analyzing circadian behavior in mice",
-  "author": "Joey Taylor",
+  "author": "Yeshuwa Taylor",
+  "license": "GPL-3.0",
   "contributors": [
-    "Dr. Melissa Richardson PhD - Scientific Methodology"
+    "Dr. Melissa E. Richardson PhD - Scientific Methodology"
   ],
   "main": "index.js",
   "scripts": {
